feat: refactored to clean architecture